---------------------------------------------------------------------------------------------------
Version: 2.2.1
Date: 22. 8. 2019
  Modding:
    - Added compatibility to event script_raised_build
    - Added compatibility to event script_raised_destroy
    - Added compatibility to event on_entity_cloned
---------------------------------------------------------------------------------------------------
Version: 2.2.0
Date: 19. 8. 2019
  Features:
    - Updated to 0.17 with a new GUI
    - Detailed description about the fields, including dummy recipes
  Changes:
    - Green fields now require military science packs
    - Forcefields will now not be selected when deconstructing/blueprinting
---------------------------------------------------------------------------------------------------
Version: 2.1.4
Date: 27. 6. 2018
  Bugfixes:
    - Bugfix api call to invalid entity when degrading linked fields
---------------------------------------------------------------------------------------------------
Version: 2.1.3
Date: 16. 5. 2018
  Changes:
    - Soft coding the technology recipes
    - Added compatibility with MoreScience mod by lovely_santa
  Bugfixes:
    - Fixed changelog wasn't showing ingame
---------------------------------------------------------------------------------------------------
Version: 2.1.2
Date: 14. 4. 2018
  Bugfixes:
    - Bugfix api call to invalid entity
---------------------------------------------------------------------------------------------------
Version: 2.1.1
Date: 24. 2. 2018
  Changes:
    - Emitters don't build a default wall when placed
  Bugfixes:
    - Bugfix wall not degrading when changing settings too fast
---------------------------------------------------------------------------------------------------
Version: 2.1.0
Date: 1. 2. 2018
  Major Features:
    - Added Forcefield gates
  Features:
    - Added changelog
    - Added ability to disable wall sections
  Changes: