@@ -1,53 +1,4 @@
 
-function throwError(what)
-    log(what)
-    game.print(what)
-end
-
-
-
-function tableIsEmpty(t)
-  return not next(t)
-end
-
-
-
-function tablesAreEqual(t1, t2)
-  if type(t1) ~= 'table' or type(t2) ~= 'table' then
-    return t1 == t2
-  end
-  for k,v in pairs(t1) do
-    if not tablesAreEqual(v, t2[k]) then
-      return false
-    end
-  end
-  for k,v in pairs(t2) do
-    if not tablesAreEqual(v, t1[k]) then
-      return false
-    end
-  end
-  return true
-end
-
-
-
-function directionToString(direction)
-  if direction == defines.direction.north then
-    return "north"
-  end
-  if direction == defines.direction.south then
-    return "south"
-  end
-  if direction == defines.direction.east then
-    return "east"
-  end
-  if direction == defines.direction.west then
-    return "west"
-  end
-end
-
-
-
 function transferToPlayer(player, dropStack)
   local countInserted = player.insert(dropStack)
   if countInserted < dropStack.count then
@@ -55,14 +6,10 @@ function transferToPlayer(player, dropStack)
   end
 end
 
-
-
 function takeFromPlayer(player, dropStack)
   local countRemoved = player.remove_item(dropStack)
   return dropStack.count - countRemoved
 end
-
-
 
 function dropOnGround(surface, position, dropStack, markForDeconstruction, force)
   local dropPos
